@@ -1,4 +1,7 @@
 <html>
+<head>
+ <link rel="stylesheet" type="text/css" href="zpt_stylesheet.css">
+</head>
 <body>
 
 <tal:test tal:define="summary python: {'length': '9.999', 'type': 'items',
@@ -16,6 +19,34 @@
  ><p class="BatchSummary" tal:condition="not:batch/summary/length"
      i18n:translate="">There are no items matching your specified criteria.</p
 ></metal:block>
+
+
+<tal:test tal:define="items python: ( {'description': 'Description',
+                                       'format': 'application/pdf',
+                                       'icon': 'file_icon.gif',
+                                       'size': '99.9 kb', 'title': 'Title',
+                                       'type': 'File', 'url': '?'}, );
+                      global batch python: {'listItemInfos': items}" />
+
+ <metal:macro metal:define-macro="listing">
+ <p class="BatchListing" tal:repeat="item_info batch/listItemInfos"
+ ><a href="" tal:attributes="href item_info/url"
+  ><img src="" alt="" title="" border="0" width="16" height="16"
+      tal:attributes="src item_info/icon; alt item_info/type;
+                      title item_info/type"
+      i18n:attributes="alt; title" /></a
+ ><tal:case tal:condition="item_info/title">&nbsp;
+  <a href="" tal:attributes="href item_info/url"
+     tal:content="item_info/title">Title</a></tal:case
+ ><tal:case tal:condition="item_info/description">
+  <br /><tal:span tal:content="item_info/description"
+ >Description</tal:span></tal:case
+ ><tal:case tal:condition="item_info/format">
+  <br /><span><tal:span tal:content="item_info/format" i18n:translate=""
+  >format</tal:span><tal:case tal:condition="item_info/size"
+  >, <tal:span tal:content="item_info/size">99.9 KB</tal:span></tal:case
+ ></span></tal:case></p
+></metal:macro>
 
 
 <tal:test tal:define="previous python: {'length': '20', 'text': 'Previous',
