@@ -1,62 +1,45 @@
-<html metal:use-macro="here/main_template/macros/master" >
-<body style="position: relative">
+<tal:page
+   xmlns:tal="http://xml.zope.org/namespaces/tal"
+   xmlns:metal="http://xml.zope.org/namespaces/metal"
+   tal:define="control python: here.index_html_control(**request.form);
+               has_local python: 'local_pt' in here.objectIds()"
+   tal:condition="control"
+><html metal:use-macro="here/main_template/macros/master">
+<body>
 
-<div metal:fill-slot="header"
-     tal:define="global has_local python: 'local_pt' in here.objectIds();
-                 global util_macros here/index_html_utils/macros;
-                " >
-
+<metal:slot metal:fill-slot="header">
   <div tal:condition="not: has_local">
-
-     <div metal:use-macro="util_macros/index_header" />
-
+<metal:macro metal:use-macro="here/index_html_utils/macros/index_header" />
   </div>
-
   <div tal:condition="has_local">
-
     <div metal:use-macro="here/local_pt/macros/header | default">
       'local_pt' header goes here.
     </div>
-
   </div>
+</metal:slot>
 
-</div><!-- header slot -->
-
-<div metal:fill-slot="main">
-
+<metal:slot metal:fill-slot="main" i18n:domain="cmf_default" tal:define="batch control/batch">
   <div id="content_well"
        style="float: left; top: 0; width: 80%;">
-
     <div tal:condition="not: has_local">
 
-      <br />
-
-      <div metal:use-macro="util_macros/index_content" />
-  
-      <div metal:use-macro="util_macros/index_links" />
-
-      <div metal:use-macro="util_macros/index_folders" />
+<metal:macro metal:use-macro="context/batch_widgets/macros/listing" />
+<metal:macro metal:use-macro="context/batch_widgets/macros/navigation" />
 
     </div>
-
     <div tal:condition="has_local">
-
       <div metal:use-macro="here/local_pt/macros/body | default">
         'local_pt' body goes here.
       </div>
-
     </div>
-
   </div>
-
   <div id="right_sidebar"
        style="width: 20%">
 
-    <div metal:use-macro="util_macros/news_box" />
+<metal:macro metal:use-macro="here/index_html_utils/macros/news_box" />
 
   </div>
-
-</div>
+</metal:slot>
 
 </body>
-</html>
+</html></tal:page>
