@@ -2,6 +2,14 @@ CMF 1.5alpha (unreleased)
 
   New Features
 
+    - PortalFolder and zpt skin: PortalFolder now inherits from OrderedFolder.
+
+      o Added buttons to 'folder_contents' that allow to set a default sorting
+        for each PortalFolder or to order the sub-objects by hand.
+
+      o Modified 'index_html' to show sub-objects in the selected order. The
+        old 'index_html' is still available as 'index_html_categorized'.
+
     - CMFDefault utils: Added 'html_marshal' function.
       This is similar to ZTUtils.make_hidden_input(), but returns a sequence
       of (name, value) pairs instead of html code.
